#pragma once

//TODO: implement strategies for non real players

class IStrategy {
private:
    int whichStrategy{};
};